# cobrapy

./: .gitignore  pyproject.toml  setup.cfg
recipes/cobra/: recipe.yaml
src/cobra/core/: model.py
tests/: conftest.py
tests/test_core/: test_model.py
